<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.seo4d696b75.android.ekisagasu.ui.log.output.LogOutputConfViewModel" />

        <import type="com.seo4d696b75.android.ekisagasu.ui.log.LogOutputExtension" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="14dp">

        <TextView
            android:id="@+id/text_dialog_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_log_output_config_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radio_group_file_extension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checkedButton="@{viewModel.checked}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_dialog_message">


            <RadioButton
                android:id="@+id/radio_button_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_extension_txt"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_button_gpx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_extension_gpx"
                android:textSize="18sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/text_txt_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:lines="1"
            android:text="@string/dialog_log_output_config_txt_description"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/text_gpx_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/radio_group_file_extension"
            app:layout_constraintTop_toTopOf="@id/radio_group_file_extension" />

        <TextView
            android:id="@+id/text_gpx_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:lines="1"
            android:text="@string/dialog_log_output_config_gpx_description"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/radio_group_file_extension"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/text_txt_description"
            app:layout_constraintTop_toBottomOf="@id/text_txt_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
